tests/functional/data/transpiler/common/errors/restrict/applied_to_non_pointer.err
applied_to_non_pointer.cpp:3:9: error: 'okl_restrict': only applies to pointer type
    3 |         @restrict int k;
      |         ^
